--- a/app/assets/stylesheets/commonwealth/index.css.scss
+++ b/app/assets/stylesheets/commonwealth/index.css.scss
@@ -38,7 +38,7 @@ body.blacklight-catalog-index {
       padding-right:14px;
 
       &:after {
-        content:'';
+        content: none;
         padding-left: 2px;
       }
 
